@@ -1,2 +1,3 @@
 # DepartmentFinalScoreChart
  DepartmentFinalScoreChart
+"vmArgs": "--module-path C:/Users/admin/Desktop/javafx-sdk-24/lib --add-modules javafx.controls,javafx.fxml"
